Swagger doc Admin user edit
